--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ build/
 .env
 .env.local
 .env.*.local
+.env.development
+.env.production
 # Keep example and template files
 !.env.example
 !.env.development.example
