--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -135,7 +135,7 @@ services:
       - YOUTUBE_API_KEY=${YOUTUBE_API_KEY}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - GROQ_API_KEY=${GROQ_API_KEY}
-      - OLLAMA_URL=${OLLAMA_URL:-http://ollama:11434}
+      - OLLAMA_URL=http://ollama:11434
       - OLLAMA_MODEL=${OLLAMA_MODEL:-llama3.2}
       - LOCAL_WHISPER_URL=${LOCAL_WHISPER_URL:-http://whisper:8001}
       - WHISPER_MODEL=${WHISPER_MODEL:-base}
@@ -176,14 +176,14 @@ services:
       context: ./whisper-service
       dockerfile: Dockerfile
       args:
-        WHISPER_MODEL: ${WHISPER_MODEL:-base}
+        WHISPER_MODEL: ${WHISPER_MODEL:-small}  # Changed from base to small for better accuracy
     container_name: youtube-analyzer-whisper
     environment:
-      - WHISPER_MODEL=${WHISPER_MODEL:-base}
-      # Limit CPU usage
-      - OMP_NUM_THREADS=2
-      - MKL_NUM_THREADS=2
-      - NUMEXPR_NUM_THREADS=2
+      - WHISPER_MODEL=${WHISPER_MODEL:-small}  # Changed from base to small for better accuracy
+      # Optimized CPU usage for better performance
+      - OMP_NUM_THREADS=4
+      - MKL_NUM_THREADS=4
+      - NUMEXPR_NUM_THREADS=4
     volumes:
       - whisper_models:/root/.cache/huggingface
     ports:
@@ -195,25 +195,38 @@ services:
       start_period: 60s
       retries: 3
     restart: unless-stopped
-    # Limit CPU usage with cpuset
+    # Increased CPU resources for better performance
     deploy:
       resources:
         limits:
-          cpus: '2.0'
+          cpus: '4.0'  # Increased from 2.0 to 4.0 for faster processing
         reservations:
-          cpus: '0.5'
+          cpus: '1.0'  # Increased from 0.5 to 1.0
 
-  # ==================== OLLAMA (Optional) ====================
+  # ==================== OLLAMA ====================
   ollama:
     image: ollama/ollama:latest
     container_name: youtube-analyzer-ollama
+    environment:
+      # Limit CPU threads to prevent excessive CPU usage
+      - OLLAMA_NUM_THREADS=2  # Reduced from 4 to 2 for lower CPU usage
+      # Limit parallel requests to prevent overload
+      - OLLAMA_NUM_PARALLEL=1
+      # Limit number of models loaded simultaneously
+      - OLLAMA_MAX_LOADED_MODELS=1
     volumes:
       - ollama_data:/root/.ollama
     ports:
       - "11434:11434"
-    profiles:
-      - local-llm
     restart: unless-stopped
+    networks:
+      - default
+    # CPU and memory limits (direct container limits)
+    # CPU: 2 cores = quota 200000 / period 100000 = 200%
+    cpu_quota: 200000  # 2 CPUs worth of quota
+    cpu_period: 100000  # Standard period (100ms)
+    mem_limit: 3G  # Limit to 3GB RAM
+    mem_reservation: 1G  # Reserve 1GB RAM
 
   # ==================== MONITORING ====================
   # cAdvisor - Container metrics collector
