--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,26 +14,28 @@
     "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "zustand": "^4.5.2",
     "@tanstack/react-query": "^5.51.1",
     "axios": "^1.7.7",
-    "react-player": "^2.16.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.2",
-    "lucide-react": "^0.427.0",
     "class-variance-authority": "^0.7.0",
-    "date-fns": "^3.6.0"
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.427.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "react-player": "^2.16.0",
+    "react-router-dom": "^6.26.0",
+    "remark-gfm": "^4.0.1",
+    "tailwind-merge": "^2.5.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@playwright/test": "^1.41.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
